Adding an option to match platform name against the testng suite name and adding UI option to enable and disable

--- a/src/main/webapp/help-platformName.html
+++ b/src/main/webapp/help-platformName.html
@@ -1,5 +1,5 @@
 <div>
     <p>
-        TestLink Platform name.
+        TestLink Platform name. You can add multiple platforms as a comma separated string. e.g: PT01,PT02
     </p>
 </div>
